2013-03-10  Kirit Saelensminde  <kirit@felspar.com>
 Added the ability to set the log message module when using the logging DSL through a new `.module()` member on the log message builder.
 `fostlib::absorbException` has been deprecated in favour of `fostlib::absorb_exception`.
 `fostlib::replaceAll` has been deprecated in favour of `fostlib::replace_all`.

2013-03-03  Kirit Saelensminde  <kirit@felspar.com>
 Changed a couple of exceptions to put extended data into the JSON data rather than the free form text.

2013-03-03  Kirit Saelensminde  <kirit@felspar.com>
 Changed the `what()` implementation of `fostlib::exceptions::exception` to no longer write out more than one line (unless the info member of the exception does so). Also removed the settings for controlling the format of the `what()` string.

2013-02-23  Kirit Saelensminde  <kirit@felspar.com>
 Implemented better error detail for when a JSON array is accessed out of bounds.

2013-02-23  Kirit Saelensminde  <kirit@felspar.com>
 Refactored `FSL_CHECK_NEQ` so that it only evaluates it's arguments once.

2013-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Moved the file specific functions into their own header. Now include `fost/file` rather than `fost/unicode` if you only need file handling APIs. Also added a `unique_filename` function suitable for generating temporary file names.

2013-02-08  Kirit Saelensminde  <kirit@felspar.com>
 Add a `directory_iterator` typedef which allows us to iterate over wpath based directory names across all supported versions of Boost.

2013-02-05  Kirit Saelensminde  <kirit@felspar.com>
 Initial simple progress meters allow progress from remote threads to be measured in a control thread.

2013-01-13  Kirit Saelensminde  <kirit@felspar.com>
 Implemented the file input operator for the `digester` so it is now possible to hash files on the file system.

2012-11-23  Kirit Saelensminde  <kirit@felspar.com>
 Added Boost Chrono to builds on Windows for Boost 1.47 and later.
