@@ -52,6 +52,15 @@ void fostlib::log::log(const fostlib::log::message &m) {
 }
 
 
+namespace {
+    void marker() {
+    }
+}
+void fostlib::log::flush() {
+    fostlib::log::detail::log_proxy::proxy().exec(boost::bind(marker));
+}
+
+
 /*
     fostlib::log::log_object
 */
