@@ -80,6 +80,10 @@ namespace fostlib {
             push_back(data, d4);
             log::log(message(level, name, data));
         }
+        
+        /// Block until the current messages have all been processed
+        FOST_CORE_DECLSPEC
+        void flush();
 
 
         /// A scoped sink is used to provide some logging capability for a short period of time
