@@ -1,0 +1,44 @@
+[
+    {
+        "package": "fost-base",
+        "codenames": ["lucid"],
+        "bits": [32, 64],
+        "variant": "release",
+        "control": {
+            "Package": "fost-base",
+            "Section": "fost-unstable",
+            "Priority": "extra",
+            "Depends": "libc6, libboost-date-time1.40.0, libboost-filesystem1.40.0, libboost-regex1.40.0, libboost-system1.40.0, libboost-thread1.40.0",
+            "Description": "Core Fost libraries\n The core of the Fost libraries together with the self-test program.",
+            "Maintainer": "Kirit Saelensminde <kirit@felspar.com>"
+        }
+    },
+    {
+        "package": "fost-base",
+        "codenames": ["precise"],
+        "bits": [32, 64],
+        "variant": "release",
+        "control": {
+            "Package": "fost-base",
+            "Section": "fost-unstable",
+            "Priority": "extra",
+            "Depends": "libc6, libboost-date-time1.46.0, libboost-filesystem1.46.0, libboost-regex1.46.0, libboost-system1.46.0, libboost-thread1.46.0",
+            "Description": "Core Fost libraries\n The core of the Fost libraries together with the self-test program.",
+            "Maintainer": "Kirit Saelensminde <kirit@felspar.com>"
+        }
+    },
+    {
+        "package": "fost-base",
+        "codenames": ["quantal", "raring"],
+        "bits": [32, 64],
+        "variant": "release",
+        "control": {
+            "Package": "fost-base",
+            "Section": "fost-unstable",
+            "Priority": "extra",
+            "Depends": "libc6, libboost-date-time1.49.0, libboost-filesystem1.49.0, libboost-regex1.49.0, libboost-system1.49.0, libboost-thread1.49.0",
+            "Description": "Core Fost libraries\n The core of the Fost libraries together with the self-test program.",
+            "Maintainer": "Kirit Saelensminde <kirit@felspar.com>"
+        }
+    }
+]
