@@ -1,3 +1,12 @@
+2013-08-20  Kirit Saelensminde  <kirit@felspar.com>
+ Added `fostlib::log::flush()` which blocks until the previous logged messages have been processed.
+
+2013-06-07  Kirit Saelensminde  <kirit@felspar.com>
+ The environment variable VERSION can now be used to specify an embedded version number in the result of fost-lib derived targets, or other shared libraries that make use of the <version> property.
+
+2013-05-03  Kirit Saelensminde  <kirit@felspar.com>
+ Make sure that the `fostlib::worker` can't leak an exception when it's destructed.
+
 2013-03-10  Kirit Saelensminde  <kirit@felspar.com>
  Added the ability to set the log message module when using the logging DSL through a new `.module()` member on the log message builder.
  `fostlib::absorbException` has been deprecated in favour of `fostlib::absorb_exception`.
